--- a/templates/private/index.html
+++ b/templates/private/index.html
@@ -8,14 +8,135 @@
   </head>
   <body>
     <main>
+      <aside class="menu-container">
+        <div class="menu">
+          <div class="power-container">
+            <button id="btn-power">
+              <img src="../../js/assets/icons/power.svg" />
+            </button>
+            <span class="user-name">USERNAME</span>
+          </div>
+
+          <section class="actions">
+            <button id="btn-table">
+              <img src="../../js/assets/icons/table.svg" />
+            </button>
+            <button id="btn-update">
+              <img src="../../js/assets/icons/update.svg" />
+            </button>
+          </section>
+        </div>
+      </aside>
+
       <section class="arena-section">
         <div class="poke-container">
           <img
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
+            src="https://play.pokemonshowdown.com/sprites/xyani/zapdos.gif"
             alt=""
           />
         </div>
       </section>
+
+      <aside class="list">
+        <div class="list-container">
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="list-item">
+            <div class="poke-item">
+              <img
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </aside>
     </main>
   </body>
 </html>
