--- a/templates/private/style.css
+++ b/templates/private/style.css
@@ -1,3 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
+:root {
+  line-height: 1.5;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   background-color: #000;
@@ -9,17 +25,166 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url(../../js/assets/img/wallpapers/arena2.jpg);
+  background-size: cover;
 }
 
 section.arena-section {
   height: 100%;
   width: 100%;
-  background: rgb(22, 0, 41);
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .poke-container {
-    border: 1px solid red;
+  max-width: 30%;
+}
+
+.poke-container img {
+  width: 100%;
+}
+
+/* ASIDE */
+
+aside {
+  position: absolute;
+  display: flex;
+}
+
+/* MENU */
+
+aside.menu-container {
+  left: 0;
+  height: 100%;
+  width: 6dvw;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* margin: 1em; */
+  width: 100%;
+}
+
+.menu-container button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.menu-container button img {
+  /* width: 100%; */
+}
+
+.power-container {
+  display: flex;
+  color: #fff;
+  align-items: center;
+  width: 100%;
+}
+/* #btn-power {
+  width: 100%;
+}
+#btn-power img {
+  width: 100%;
+} */
+
+.user-name {
+  margin-left: 1.5em;
+  font-size: .8em;
+}
+
+.actions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: #fff;
+  width: 100%;
+}
+
+#btn-table img, #btn-update img {
+  padding: .5em;
+  opacity: .5;
+  width: 100%;
+}
+#btn-update img {
+  background-color: #000;
+  border-radius: 50px;
+}
+
+#btn-table img:hover, #btn-update img:hover {
+  opacity: 1;
+}
+
+/* LIST */
+
+aside.list {
+  width: 30dvw;
+  flex-direction: column;
+  right: 0;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.list-container {
+  padding: 1dvh;
+  margin: 1dvh;
+  background: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.list-item {
+  height: 7dvh;
+  background: rgb(20 20 20);
+  border-radius: 4px;
+  margin-bottom: 1dvh;
+  display: flex;
+  align-items: center;
+  padding: 1dvh;
+}
+
+.list-item:hover {
+  background: rgb(36, 36, 36);
+}
+
+.poke-item {
+  width: 7dvh;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 100px;
+  padding: .1dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.poke-item img {
+  width: 100%;
+}
+
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+  width: 1dvh;
+  height: 1dvh;
+}
+
+::-webkit-scrollbar-track {
+  background: #00000000;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ffffff4a;
+  border-radius: 10px;
+  border: 2px solid #ff000000;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #be9c00;
 }
