template dinamico arena

--- a/templates/private/index.html
+++ b/templates/private/index.html
@@ -28,6 +28,10 @@
         </div>
       </aside>
 
+      <div class="pokeball-container">
+        <img src="../../js/assets/img/poke2.png" />
+      </div>
+
       <section class="arena-section">
         <div class="poke-container">
           <img
