--- a/templates/private/style.css
+++ b/templates/private/style.css
@@ -95,7 +95,7 @@ aside.menu-container {
 
 .user-name {
   margin-left: 1.5em;
-  font-size: .8em;
+  font-size: 0.8em;
 }
 
 .actions {
@@ -106,9 +106,10 @@ aside.menu-container {
   width: 100%;
 }
 
-#btn-table img, #btn-update img {
-  padding: .5em;
-  opacity: .5;
+#btn-table img,
+#btn-update img {
+  padding: 0.5em;
+  opacity: 0.5;
   width: 100%;
 }
 #btn-update img {
@@ -116,7 +117,8 @@ aside.menu-container {
   border-radius: 50px;
 }
 
-#btn-table img:hover, #btn-update img:hover {
+#btn-table img:hover,
+#btn-update img:hover {
   opacity: 1;
 }
 
@@ -157,7 +159,7 @@ aside.list {
   height: 100%;
   background-color: #fff;
   border-radius: 100px;
-  padding: .1dvh;
+  padding: 0.1dvh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -187,4 +189,24 @@ aside.list {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #be9c00;
+}
+
+/* POKEBALL */
+
+.pokeball-container {
+  width: 30dvh;
+  height: 30dvh;
+  position: absolute;
+  bottom: 0;
+  margin-left: -30%;
+}
+
+.pokeball-container img {
+  width: 100%;
+  height: 100%;
+  opacity: .8;
+}
+
+.pokeball-container img:hover {
+  opacity: 1;
 }
