--- a/js/home.css
+++ b/js/home.css
@@ -25,6 +25,8 @@ main {
   align-items: center;
   max-width: calc(100% - 2em);
   height: 100vh;
+  background-image: url(./assets/img/wallpapers/arena2.jpg);
+  background-size: cover;
 }
 
 section.table-section {
