--- a/js/arena.css
+++ b/js/arena.css
@@ -153,11 +153,14 @@ aside.list {
 
 .list-item:hover {
   background: rgb(36, 36, 36);
+  color: rgb(243, 243, 20);
 }
+
 .list-item h1 {
-  color:red;
- 
+  margin-left: auto;
+  margin-right: 0;
 }
+
 
 .poke-item {
   width: 7dvh;
