--- a/js/home.css
+++ b/js/home.css
@@ -35,6 +35,7 @@ section.table-section {
   height: calc(100dvh - 4em);
   border-radius: 20px;
   box-shadow: 0px 0px 20px 8px #000000;
+  background-color: #000000bd;
 }
 
 .cat-row {
