--- a/js/styles/home.css
+++ b/js/styles/home.css
@@ -25,7 +25,7 @@ main {
   align-items: center;
   max-width: calc(100% - 2em);
   height: 100vh;
-  background-image: url(./assets/img/wallpapers/arena2.jpg);
+  background-image: url(../assets/img/wallpapers/arena2.jpg);
   background-size: cover;
 }
 
