--- a/js/styles/categories.css
+++ b/js/styles/categories.css
@@ -93,93 +93,6 @@ section.table-section {
   background-color: #be9c00;
 }
 
-/* MODAL */
-
-/*Efecto*/
-.modalmask {
-  position: fixed;
-  font-family: Arial, sans-serif;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
-  z-index: 99999;
-  opacity: 0;
-  -webkit-transition: opacity 100ms ease-in;
-  -moz-transition: opacity 100ms ease-in;
-  transition: opacity 100ms ease-in;
-  pointer-events: none;
-  text-align: center;
-}
-.modalmask:target {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-/*Formato de la ventana*/
-.modalbox {
-  width: 400px;
-  position: relative;
-  padding: 5px 20px 13px 20px;
-  background: #0e96a500;
-  border-radius: 3px;
-  -webkit-transition: all 300ms ease-in;
-  -moz-transition: all 300ms ease-in;
-  transition: all 300ms ease-in;
-}
-
-/*Movimientos*/
-.movedown {
-  margin: 0 auto;
-}
-.rotate {
-  margin: 10% auto;
-  -webkit-transform: scale(-5, -5);
-  transform: scale(-5, -5);
-}
-.resize {
-  margin: 10% auto;
-  width: 0;
-  height: 0;
-}
-.modalmask:target .movedown {
-  margin: 10% auto;
-}
-.modalmask:target .rotate {
-  transform: rotate(360deg) scale(1, 1);
-  -webkit-transform: rotate(360deg) scale(1, 1);
-}
-
-.modalmask:target .resize {
-  width: 400px;
-  height: 200px;
-}
-
-/*Boton de cerrar*/
-.close {
-  background: #fff;
-  color: #000;
-  line-height: 25px;
-  position: absolute;
-  right: 1px;
-  text-align: center;
-  top: 1px;
-  width: 24px;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 100px;
-}
-
-.close:hover {
-  background: #000;
-  color: #fff;
-}
-
-.img-modal {
-  width: 100%;
-}
-
 .btn-container {
   display: flex;
   width: 100%;
@@ -210,4 +123,50 @@ button,
   background: black;
   margin-bottom: 2em;
   cursor: pointer;
+}
+
+.modal {
+  background-color: #000000a1;
+  width: 100dvw;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+.modal-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hidden {
+  display: none;
+}
+.visible {
+  display: block;
+}
+
+.img-modal-big {
+  height: 50%;
+}
+
+select {
+  height: 50px;
+  margin-top: 5em;
+  margin-left: 5em;
+  background: black;
+  color: aliceblue;
+  font-family: "Press Start 2P", system-ui;
+  border: 1px solid lightblue;
+}
+
+#pokemon-data {
+  margin-right: 2em;
+}
+
+.gif-container {
+  margin-top: 2em;
 }
