--- a/js/styles/arena.css
+++ b/js/styles/arena.css
@@ -39,7 +39,7 @@ section.arena-section {
 }
 
 .poke-container {
-  width: 20%;
+  width: 15%;
   display: flex;
   justify-content: center;
   /* align-items: center; */
@@ -117,7 +117,8 @@ aside.menu-container {
 }
 #btn-update img {
   background-color: #000;
-  border-radius: 50px;
+  border-radius: 300px;
+  margin-bottom: 3em;
 }
 
 #btn-table img:hover,
