--- a/js/styles/home.css
+++ b/js/styles/home.css
@@ -197,3 +197,49 @@ section.table-section {
   font-family: "Press Start 2P", system-ui;
   font-size: 1.2rem;
 }
+
+.modal {
+  background-color: #000000a1;
+  width: 100dvw;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+.modal-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hidden {
+  display: none;
+}
+.visible {
+  display: block;
+}
+
+.img-modal-big {
+  height: 50%;
+}
+
+select {
+  height: 50px;
+  margin-top: 5em;
+  margin-left: 5em;
+  background: black;
+  color: aliceblue;
+  font-family: "Press Start 2P", system-ui;
+  border: 1px solid lightblue;
+}
+
+#pokemon-data {
+  margin-right: 2em;
+}
+
+.gif-container {
+  margin-top: 2em;
+}
